# my_kmeans

./: 37247004.md  LICENSE  Makefile  README.md  myInteractiveMode.py  mykmeans.py  pyproject.toml
.github/workflows/: say_hello.yml
docs/: ramen.md
