[tool.poetry]
name = "my-kmeans"
version = "0.1.0"
description = ""
authors = ["Takuto-Onikubo <onikubo-takuto386@g.ecc.u-tokyo.ac.jp>"]
readme = "README.md"
packages = [{include = "my_kmeans"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
